# trustlens-ai

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_wizard.py  start.sh
.github/ISSUE_TEMPLATE/: feature_request.yml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: index.css
dashboard/src/components/: DeepDive.tsx  EvidenceTimeline.tsx  Layout.tsx  PipelineSteps.tsx  ScoreGauge.tsx  SignalCard.tsx
dashboard/src/hooks/: useAnalysisPolling.ts
dashboard/src/pages/: AboutPage.tsx  CommunityPage.tsx  ResultsPage.tsx  ScanPage.tsx
dashboard/src/services/: api.ts
docs/: LOCAL_LLM_SETUP.md  ai-trust-explanation.md  anti-hallucination.md  scoring-methodology.md  security-model.md
docs/assets/: .gitkeep
examples/: example_response.json
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DeepDive.tsx  EvidenceTimeline.tsx  Layout.tsx  PipelineSteps.tsx  ScoreGauge.tsx  SignalCard.tsx
frontend/src/pages/: AboutPage.tsx  CommunityPage.tsx  ResultsPage.tsx  ScanPage.tsx
frontend/src/services/: api.ts
src/trustlens/: __init__.py  main.py
src/trustlens/api/: deps.py
src/trustlens/api/middleware/: api_auth.py  domain_filter.py  rate_limit.py
src/trustlens/api/routes/: analyze.py  community.py  enterprise.py  health.py  keys.py  report.py  threat_intel.py
src/trustlens/core/: __init__.py  logging.py
src/trustlens/db/: __init__.py
src/trustlens/models/: __init__.py
src/trustlens/observability/: __init__.py
src/trustlens/schemas/: __init__.py
src/trustlens/security/: __init__.py
src/trustlens/services/: orchestrator.py
src/trustlens/services/ai/: __init__.py
src/trustlens/services/analysis/: behavioral.py  brand_similarity.py  content_extractor.py  domain_intel.py  download_threat_detector.py  logo_detection.py  payment_detector.py  rules.py  screenshot_similarity.py  security_headers.py  zeroday.py  (+1 more)
(+9 files in other folders)
